--- a/css/stylefoot.css
+++ b/css/stylefoot.css
@@ -2,6 +2,8 @@ section h2 {
     background-color: rgb(49, 53, 57);
     color: white ;
     font-size: 2em;
+    font-family: 'Oleo Script', cursive;
+    text-transform: uppercase;
     
 }
 
@@ -13,12 +15,38 @@ body {
 }
 
 article {
-    background-image: url(http://source.unsplash.com/70YxSTWa2Zw);
+    background: url(http://source.unsplash.com/70YxSTWa2Zw) rgba(0, 0, 0, 0.5);
     background-position: bottom;
+    background-blend-mode: multiply;
+    
+    
 }
 
 article h3 {
 
 color: whitesmoke;
 font-size: 2em;
+}
+
+article em {
+    color: rgb(248, 235, 218);
+    font-size: 3em;
+    margin-left: 4%;
+    margin-right: 4%;
+    position: relative;
+    top: -1em;
+    width: 3em;
+    height: 3em;
+    text-align: center;
+    background:  rgba(255, 255, 255, 0.6) url(https://zupimages.net/up/19/44/wl80.png);
+    background-blend-mode: multiply;
+    background-position: center;
+    background-size: 150%;
+    padding: 5px 10px 5px 5px;
+    border-radius: 100%;
+    font-family: 'Titan One', cursive;
+    
+    
+
+    
 }
